--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,10 +3,19 @@
    <%= form.label :commenter %> <br>
    <%= form.text_field :commenter %>
  </p>
+
  <p>
   <%= form.label :body %><br>
   <%= form.text_area :body %>
  </p>
+
+ <p>
+   <%= form.label :status %><br>
+   <%= form.select :status, ['public','private','archived'], selected: 'public' %>
+ </p>
+ 
+ <br>
+
  <p>
   <%= form.submit %>
  </p>
